--- a/cmake/protobuf-config.cmake.in
+++ b/cmake/protobuf-config.cmake.in
@@ -1,10 +1,16 @@
 # Version info variables
 set(PROTOBUF_VERSION        "@protobuf_VERSION@")
 set(PROTOBUF_VERSION_STRING "@protobuf_VERSION_STRING@")
+set(PROTOBUF_USE_ZLIB       "@protobuf_WITH_ZLIB@")
+
 
 # Current dir
 get_filename_component(_PROTOBUF_PACKAGE_PREFIX
   "${CMAKE_CURRENT_LIST_FILE}" PATH)
+
+if (PROTOBUF_USE_ZLIB)
+  find_package(ZLIB)
+endif()
 
 # Imported targets
 include("${_PROTOBUF_PACKAGE_PREFIX}/protobuf-targets.cmake")
